--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ channels-redis==3.2.0
 constantly==15.1.0
 cryptography==3.2.1
 daphne==3.0.0
+dj-database-url==0.5.0
 Django==3.1.1
+django-heroku==0.3.1
 gunicorn==20.0.4
 hiredis==1.1.0
 hyperlink==20.0.1
@@ -22,6 +24,7 @@ msgpack-python==0.5.6
 numpy==1.19.4
 opencv-python==4.4.0.46
 Pillow==8.0.1
+psycopg2==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
@@ -35,4 +38,5 @@ six==1.15.0
 sqlparse==0.4.1
 Twisted==20.3.0
 txaio==20.4.1
+whitenoise==5.2.0
 zope.interface==5.2.0
